--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello world
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>My PWA</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Hello World!</h1>
+  </div>
+  <script type="text/javascript" src="script.js"></script>
+</body>
+</html>
