--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!-- PWA meta tags-->
+  <link rel="manifest" href="manifest.json" />
+  <!-- ios support -->
+  <link rel="apple-touch-icon" href="icons/wind_192.png" />
+  <link rel="apple-touch-icon" href="icons/wind_512.png" />
+  <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+  <meta name="theme-color" content="#db4938" />
+  <!-- End PWA meta tags-->
   <title>My PWA</title>
 </head>
 <body>
   <div class="container">
-    <h1>Hello World!</h1>
+    <h1><a href="page.html">Hello World!</a></h1>
   </div>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
