--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <!-- PWA meta tags-->
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
   <!-- ios support -->
   <link rel="apple-touch-icon" href="icons/wind_192.png" />
   <link rel="apple-touch-icon" href="icons/wind_512.png" />
