push to test app on smartphone

--- a/page_deux.html
+++ b/page_deux.html
@@ -16,8 +16,10 @@
   <title>My PWA</title>
 </head>
 <body>
-  <div class="container">   
-    <h1><a href="page_deux.html">Click me 😎!</a></h1>
+  <div class="container">
+    <a class="app-go-back" href="index.html"><img src="images/left-arrow.png" style="width: 30px; height: auto;"></a>
+    <h1><a href="page_trois.html">Click me again 😎!</a></h1>
+    <h2>I work offline too ^^</h2>
   </div>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
