--- a/page_trois.html
+++ b/page_trois.html
@@ -15,7 +15,16 @@
     <title>My PWA</title>
   </head>
   <body>
-    <h1>hello</h1> 
+    
+    <div class="container">
+      <a class="app-go-back" href="page_deux.html"><img src="images/left-arrow.png" style="width: 30px; height: auto;"></a>
+      <h1>YAYYYYYY</h1>
+      <div class="gif">
+        <img src="images/happy.gif" alt="happy animated">
+      </div>
+    </div>
+  
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
 
