--- a/page_trois.html
+++ b/page_trois.html
@@ -19,8 +19,8 @@
     <div class="container">
       <a class="app-go-back" href="page_deux.html"><img src="images/left-arrow.png" style="width: 30px; height: auto;"></a>
       <h1>YAYYYYYY</h1>
-      <div class="gif">
-        <img src="images/happy.gif" alt="happy animated">
+      <div class="div-gif">
+        <img src="images/happy.gif" alt="happy animated" class="my-gif">
       </div>
     </div>
   
