--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     
-<h1>title</h1>
+<h1>title ok</h1>
 
   <script type="text/javascript" src="js/script.js"></script>
   </body>
