--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css" /> -->
+            
     <title>Maxime Smolis | Developpeur Web</title>
   </head>
   <body>
     
-<h1>title ok</h1>
+<h1>title oki doki</h1>
 
-  <script type="text/javascript" src="js/script.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="text/javascript" src="public/js/script.js"></script>
   </body>
 </html>
