--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link type="text/css" rel="stylesheet" href="public/css/materialize.min.css"  media="screen,projection"/>
     <!-- stylesheet-->
     <link rel="stylesheet" type="text/css" href="public/css/style.css" />
-    <script type="text/javascript" src="public/js/script.js"></script>
+    <!-- <script type="text/javascript" src="public/js/script.js"></script> -->
     <title>Maxime Smolis | Developpeur Web</title>
   </head>
   <body>
-    
+    <h1>hello</h1>
 
-    <div id="navbar"></div>
+    <!-- <div id="navbar"></div>
 
     <div id="header"></div>
 
@@ -26,7 +26,7 @@
 
     <div id="contact"></div>
 
-    <div id="footer"></div>
+    <div id="footer"></div> -->
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="public/js/materialize.min.js"></script>
