--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <h1>hello</h1>
 
-    <!-- <div id="navbar"></div>
+    <div id="navbar"></div>
 
     <div id="header"></div>
 
@@ -26,7 +26,7 @@
 
     <div id="contact"></div>
 
-    <div id="footer"></div> -->
+    <div id="footer"></div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="public/js/materialize.min.js"></script>
