--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="public/css/materialize.min.css"  media="screen,projection"/>
     <!-- stylesheet-->
     <link rel="stylesheet" type="text/css" href="public/css/style.css" />
-    <!-- <script type="text/javascript" src="public/js/script.js"></script> -->
+    <script type="text/javascript" src="public/js/script.js"></script>
     <title>Maxime Smolis | Developpeur Web</title>
   </head>
   <body>
