--- a/_partials/contact.html
+++ b/_partials/contact.html
@@ -1,6 +1,6 @@
 <div class="contact-container">
   <span class="center-align"><p>Faire un projet <br> ensemble</p></span>
   <span class="center-align"><p>Interessé à travailler ensemble ? Je suis à l'écoute de toute nouvelle opportunité</p></span>
-  <span class="btn-flex-cta"><a href="#" class="btn btn-large contact-btn">on y va</a></span>
+  <span class="btn-flex-cta"><a href="mailto:maxime.smolis@gmail.com" class="btn btn-large contact-btn">on y va</a></span>
 
 </div>
