--- a/_partials/header.html
+++ b/_partials/header.html
@@ -1,7 +1,9 @@
 <div class="header-container">
   <div class="header-content">
-    <h1 class="first-title center-align">Developpeur web</h1>
-    <p class="center-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <div class="container">
+      <h1 class="first-title center-align">Developpeur web</h1>
+      <h5 class="center-align">Passionné par le web, j'aime créer des jolies choses sur internet.</h5>
+    </div>
   </div>
    
   <div class="center-align">
