--- a/_partials/presentation-skills.html
+++ b/_partials/presentation-skills.html
@@ -1,7 +1,7 @@
 <div class="presentation-section">
   <div class="container">
-    <h1 class="center-align presentation-title">hello, Je m'appelle Maxime, enchanté!</h1>
-    <p class="center-align">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <h1 class="center-align presentation-title">Hello! Je m'appelle Maxime. Enchanté!</h1>
+    <p class="center-align">Depuis le début de mon parcours dans le monde merveilleux j'ai travaillé sur des projets variés, allant des sites internet aux application web et mobile. Je suis passionné par mon métier. N'hésitez pas à me contacter ou à jeter un coup d'oeil à mes projets.</p>
   </div>   
 </div>
 
@@ -10,81 +10,124 @@
     <div class="row">
       <div class="col s12 m4 skill-container  center-align">
         <div class="skill-icon-container">
-          <img src="public/images/icons/web-programming.png" class="skill-icon">
+          <img src="public/images/icons/web.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>web</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Développement</h2>
+          <div class="container">
+            <p>Passionné par le developpement web, je saurai donner vie à vos projets web.</p>
+          </div>
+          
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">langages</h5>
-            <p>Php, Javascript</p>
-            <p>html, css</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">environnement</h5>
-            <p>front-end</p>
-            <p>back-end</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">autres compétences</h5>
-            <p>front-end</p>
-            <p>back-end</p>
+            <h5 class="subtitle-col">Langages</h5>
+            <p class="s">
+              Php, Laravel
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>    
+            </p>  
+            <p>
+              Javascript, React Js
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </p>
+            <p>
+              html, css
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span> 
+            </p>
           </div>
         </div>
       </div>
       
       <div class="col s12 m4 skill-container center-align">
         <div class="skill-icon-container">
-          <img src="public/images/icons/web-programming.png" class="skill-icon">
+          <img src="public/images/icons/design.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>web</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Web Design</h2>
+          <div class="container">
+            <p>Envie d'un design en particulier ? discutons-en, il n'y aucune limite à vos envies.</p>
+          </div>
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">langages</h5>
-            <p>Php, Javascript</p>
-            <p>html, css</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">environnement</h5>
-            <p>front-end</p>
-            <p>back-end</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">autres compétences</h5>
-            <p>front-end</p>
-            <p>back-end</p>
+            <h5 class="subtitle-col">Suite Adobe</h5>
+            <p>
+              Indesign
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </p>
+            <p>
+              PhotoShop
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </p>
+            <p>
+              Illustrator
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </p>
           </div>
         </div>
       </div>
 
       <div class="col s12 m4 skill-container center-align">
         <div class="skill-icon-container">
-          <img src="public/images/icons/web-programming.png" class="skill-icon">
+          <img src="public/images/icons/translation.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>web</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Localisation</h2>
+          <div class="container">
+            <p>Cursus en langues étrangères appliquées, voyageur et passionné par l'anglais et l'italien. </p>
+          </div>
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">langages</h5>
-            <p>Php, Javascript</p>
-            <p>html, css</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">environnement</h5>
-            <p>front-end</p>
-            <p>back-end</p>
-          </div>
-          <div class="sub-section-col">
-            <h5 class="subtitle-col">autres compétences</h5>
-            <p>front-end</p>
-            <p>back-end</p>
+            <h5 class="subtitle-col">Langues étrangères</h5>
+            <p>
+              Francais
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+            </p>
+            <p>
+              Anglais
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </p>
+            <p>
+              Italien
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+            </p>
           </div>
         </div>
       </div>
