--- a/_partials/projects.html
+++ b/_partials/projects.html
@@ -1,5 +1,5 @@
 
-<div class="project-container">
+<div id="projects" class="project-container">
 <h2 class="center-align projects-title">Quelques projets</h2>
   <div class="row ">
     <div class="col s12 m4">
