--- a/_partials/footer.html
+++ b/_partials/footer.html
@@ -6,7 +6,7 @@
                 <p class="grey-text text-lighten-4">
                 “Never stop learning, because life never stops teaching.”
                 </p>
-                <span><i class="fab fa-linkedin fa-2x"></i><i class="fab fa-github-square fa-2x"></i></span>
+                <span><a href="https://fr.linkedin.com/in/maxime-smolis/fr"><i class="fab fa-linkedin fa-2x"></i></a> <a href="https://github.com/maxxsmo"><i class="fab fa-github-square fa-2x"></i></a> </span>
               </div>
               
             </div>
