--- a/_partials/navbar.html
+++ b/_partials/navbar.html
@@ -1,10 +1,20 @@
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
+  <li><a href="#projects">Mes projets</a></li>
+  <li class="divider"></li>
+  <li><a href="mailto:maxime.smolis@gmail.com" class="btn main-style-for-btn">Me contacter</a></li>
+</ul>
 <nav>
   <div class="nav-wrapper">
     <a href="#" class="brand-logo"><img src="public/images/logo.png" alt=""></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="#">Mon CV</a></li>
-      <li><a href="sass.html">Mes projets</a></li>
-      <li><a href="badges.html" class="btn main-style-for-btn">Me contacter</a></li>
+      <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
+      <li><a href="#projects">Mes projets</a></li>
+      <li><a href="mailto:maxime.smolis@gmail.com" class="btn main-style-for-btn">Me contacter</a></li>
+    </ul>
+    <ul class="right">
+      <li><a class="dropdown-trigger hide-on-med-and-up show-on-medium-and-down" href="#" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
