new page added for english versoin

--- a/en.html
+++ b/en.html
@@ -25,22 +25,18 @@
   <li class="divider"></li>
   <li><a href="mailto:maxime.smolis@gmail.com">Me contacter</a></li>
 </ul>
-<ul id="dropdown2" class="dropdown-content">
-  <li><a href="index.html">Fr</a></li>
-  <li class="divider"></li>
-  <li><a href="en.html">En</a></li>
-</ul>
 <nav>
   <div class="nav-wrapper">
     <a href="#" class="brand-logo"><img src="public/images/logo.png" alt=""></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
       <li><a href="#projects">Mes projets</a></li>
-      <li><a id="drop" class="dropdown-trigger" href="#" data-target="dropdown2"><i class="fas fa-globe-europe"></i></a></li>
+      <li><a href="index.html">Version Fr</a></li>
       <li><a href="mailto:maxime.smolis@gmail.com" class="btn main-style-for-btn">Me contacter</a></li>
+      
     </ul>
     <ul class="right">
-      <li><a id="drop" class="dropdown-trigger hide-on-med-and-up show-on-medium-and-down" href="#" data-target="dropdown1"><i class="fas fa-bars"></i></a></li>
+      <li><a id="drop" class="dropdown-trigger hide-on-med-and-up show-on-medium-and-down" href="#" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
