engish verison done

--- a/en.html
+++ b/en.html
@@ -11,7 +11,7 @@
     <!-- stylesheet-->
     <link rel="stylesheet" type="text/css" href="public/css/style.css" />
     <!-- <script type="text/javascript" src="public/js/script.js"></script> -->
-    <title>Maxime Smolis | Developpeur Web</title>
+    <title>Maxime Smolis | Web Developer</title>
   </head>
   <body>
   
@@ -20,23 +20,28 @@
 
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
-  <li><a href="#projects">Mes projets</a></li>
+  <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">My resume</a></li>
+  <li><a href="#projects">My projects</a></li>
+  <li><a href="mailto:maxime.smolis@gmail.com">Get in touch</a></li>
   <li class="divider"></li>
-  <li><a href="mailto:maxime.smolis@gmail.com">Me contacter</a></li>
+  <li><a href="index.html">Fr</a></li>
+</ul>
+<ul id="dropdown2" class="dropdown-content">
+  <li><a href="index.html">Fr</a></li>
+  <li class="divider"></li>
+  <li><a href="en.html">En</a></li>
 </ul>
 <nav>
   <div class="nav-wrapper">
     <a href="#" class="brand-logo"><img src="public/images/logo.png" alt=""></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
-      <li><a href="#projects">Mes projets</a></li>
-      <li><a href="index.html">Version Fr</a></li>
-      <li><a href="mailto:maxime.smolis@gmail.com" class="btn main-style-for-btn">Me contacter</a></li>
-      
+      <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">My resume</a></li>
+      <li><a href="#projects">My projects</a></li>
+      <li><a id="drop" class="dropdown-trigger" href="#" data-target="dropdown2"><i class="fas fa-globe-europe"></i></a></li>
+      <li><a href="mailto:maxime.smolis@gmail.com" class="btn main-style-for-btn">Get in touch</a></li>
     </ul>
     <ul class="right">
-      <li><a id="drop" class="dropdown-trigger hide-on-med-and-up show-on-medium-and-down" href="#" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a id="drop" class="dropdown-trigger hide-on-med-and-up show-on-medium-and-down" href="#" data-target="dropdown1"><i class="fas fa-bars"></i></a></li>
     </ul>
   </div>
 </nav>
@@ -47,8 +52,8 @@
 <div class="header-container">
   <div class="header-content">
     <div class="container">
-      <h1 class="first-title center-align">Developpeur web</h1>
-      <h5 class="center-align">Passionné par le web, j'aime créer des jolies choses sur internet.</h5>
+      <h1 class="first-title center-align">Web Developer</h1>
+      <h5 class="center-align">Passionate with everything related to the web, I love coding and designing beautiful things</h5>
     </div>
   </div>
    
@@ -61,8 +66,8 @@
 
 <div class="presentation-section">
   <div class="container">
-    <h1 class="center-align presentation-title">Hello! Je m'appelle Maxime. Enchanté!</h1>
-    <p class="center-align">Depuis le début de mon parcours dans le monde merveilleux j'ai travaillé sur des projets variés, allant des sites internet aux application web et mobile. Je suis passionné par mon métier. N'hésitez pas à me contacter ou à jeter un coup d'oeil à mes projets.</p>
+    <h1 class="center-align presentation-title">Hi! I am Maxime. Nice to meet you!</h1>
+    <p class="center-align">Since I have begun my journey in coding I have worked on many different projects from web applications to mobile apps. I really love what I do. Do not hesitate to have a look at my projects or to get in touch.</p>
   </div>   
 </div>
 
@@ -74,15 +79,15 @@
           <img src="public/images/icons/web.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>Développement</h2>
+          <h2>Coding</h2>
           <div class="container">
-            <p>Passionné par le developpement web, je saurai donner vie à vos projets web.</p>
+            <p>Loving the web, I have the skills to make your dream project happens.</p>
           </div>
           
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">Langages</h5>
+            <h5 class="subtitle-col">Languages</h5>
             <p class="s">
               Php, Laravel
               <span class="fa fa-star checked"></span>
@@ -116,14 +121,14 @@
           <img src="public/images/icons/design.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>Web Design</h2>
+          <h2>Design</h2>
           <div class="container">
-            <p>Envie d'un design en particulier ? discutons-en, il n'y aucune limite à vos envies.</p>
+            <p>Craving for a beautiful design ? Just ask, I can meet your needs.</p>
           </div>
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">Suite Adobe</h5>
+            <h5 class="subtitle-col">Adobe suite</h5>
             <p>
               Indesign
               <span class="fa fa-star checked"></span>
@@ -157,16 +162,16 @@
           <img src="public/images/icons/translation.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>Localisation</h2>
+          <h2>Localization</h2>
           <div class="container">
-            <p>Cursus en langues étrangères appliquées, voyageur et passionné par l'anglais et l'italien. </p>
+            <p>Loving to travel and to discover new cultures</p>
           </div>
         </div>
         <div class="content-col">
           <div class="sub-section-col">
-            <h5 class="subtitle-col">Langues étrangères</h5>
+            <h5 class="subtitle-col">Foreign languages</h5>
             <p>
-              Francais
+              French
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -174,7 +179,7 @@
               <span class="fa fa-star checked"></span>
             </p>
             <p>
-              Anglais
+              English
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -182,7 +187,7 @@
               <span class="fa fa-star"></span>
             </p>
             <p>
-              Italien
+              Italian
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -201,7 +206,7 @@
 
 
 <div id="projects" class="project-container">
-  <h2 class="center-align projects-title">Quelques projets</h2>
+  <h2 class="center-align projects-title">Some of my projects</h2>
     <div class="row ">
       <div class="col s12 m4">
         <a href="https://festroad.herokuapp.com/">
@@ -239,9 +244,9 @@
 <!-- contact -->
 
 <div class="contact-container">
-  <span class="center-align"><p>Faire un projet <br> ensemble</p></span>
-  <span class="center-align"><p>Interessé à travailler ensemble ? Je suis à l'écoute de toute nouvelle opportunité</p></span>
-  <span class="btn-flex-cta"><a href="mailto:maxime.smolis@gmail.com" class="btn btn-large contact-btn">on y va</a></span>
+  <span class="center-align"><p>Make a project<br> together</p></span>
+  <span class="center-align"><p>Interested in working together ? I am always looking for new challenges</p></span>
+  <span class="btn-flex-cta"><a href="mailto:maxime.smolis@gmail.com" class="btn btn-large contact-btn">Let's go</a></span>
 
 </div>
 
@@ -251,7 +256,7 @@
   <div class="container">
     <div class="row">
       <div class="center-align">
-        <h5 class="white-text">Merci Pour votre Visite</h5>
+        <h5 class="white-text">Thanks for visiting my website</h5>
         <p class="grey-text text-lighten-4">
         “Never stop learning, because life never stops teaching.”
         </p>
