--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="https://drive.google.com/uc?export=download&id=1QHqsJklHF9RgDEUZeKVRoCm2fkB0fx3w">Mon CV</a></li>
   <li><a href="#projects">Mes projets</a></li>
-  <li class="divider"></li>
   <li><a href="mailto:maxime.smolis@gmail.com">Me contacter</a></li>
+  <li class="divider"></li>
+  <li><a href="en.html">En</a></li>
 </ul>
 <ul id="dropdown2" class="dropdown-content">
   <li><a href="index.html">Fr</a></li>
   <li class="divider"></li>
-  <li><a href="en.html">En</a></li>
+  
 </ul>
 <nav>
   <div class="nav-wrapper">
@@ -78,7 +79,7 @@
           <img src="public/images/icons/web.png" class="skill-icon">
         </div>
         <div class="title-col">
-          <h2>Développement</h2>
+          <h2>Code</h2>
           <div class="container">
             <p>Passionné par le developpement web, je saurai donner vie à vos projets web.</p>
           </div>
