--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <ul id="dropdown2" class="dropdown-content">
   <li><a href="index.html">Fr</a></li>
   <li class="divider"></li>
-  
+  <li><a href="en.html">En</a></li>
 </ul>
 <nav>
   <div class="nav-wrapper">
